# jaxmix

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: python-package.yml
src/genspn/: distributions.py  io.py
test/: test_distribution.py  test_score.py
